# zibal

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
api/: settings.py  urls.py
mongo-init/: init.js
reports/: serializers.py  urls.py  views.py
reports/management/commands/: precompute_summaries.py
reports/services/: aggregations.py  mongo_client.py  utils.py
scripts/: restore.sh
